estilos al filtro de tarea alumno

--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -76,7 +76,7 @@
                 <!--CARDS WRAPPER-->
                 <h:panelGroup layout="block" styleClass="uk-margin uk-grid uk-child-width-1-1@m">
                     <div>
-                        <div class="titulo-section uk-text-center uk-text-bold">Filtro de Asignación</div>
+                        <div class="titulo-section uk-text-center uk-text-bold">Filtros</div>
                     </div>
                 </h:panelGroup>
                 <div class="js-filter" data-uk-sortable="handle: .drag-icon">
