estilos a las vistas de profesore

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -37,7 +37,7 @@
         <div class="uk-margin-large-top"><h1 class="uk-margin-top lescuadron">Student Administration</h1></div>
         <div class="uk-grid" uk-grid="">
             <div class="uk-width-1-3@m">
-                <div class="uk-card uk-card-default uk-card-small color-card-four margen-one">
+                <div class="uk-card uk-card-default uk-card-small color-card-six margen-one">
                     <div class="uk-card-header barder-card">
                         <div class="uk-grid-small uk-flex-middle" uk-grid="">
                             <div class="uk-width-auto">
@@ -120,8 +120,8 @@
                                         <ul class="uk-nav uk-dropdown-nav uk-text-left">
                                             <li>
                                                 <h:link outcome="detalle-alumno">
-                                                    <h:outputText pt:uk-icon="icon: file-edit" styleClass="uk-margin-small-right uk-icon" />
-                                                    <span class="uk-text-middle"><h:outputText value="Detalle"/></span>
+                                                    <h:outputText pt:uk-icon="icon: file-edit" styleClass="uk-margin-small-right uk-icon uk-text-primary"/>
+                                                    <span class="uk-text-middle uk-text-primary"><h:outputText value="Detalle"/></span>
                                                     <f:param name="idAlumno" value="#{tarea.id}"/>
                                                 </h:link>
                                             </li>
