--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -48,7 +48,7 @@
                     <li data-uk-filter-control=".nivel-card "><a href="#">Asignación de nivel</a></li>
                 </ul>
                 <div class="uk-width-1-3@m uk-first-column uk-margin-bottom">
-                    <div class="uk-card uk-card-default uk-card-small color-card-four margen-one">
+                    <div class="uk-card uk-card-default uk-card-small color-card-six margen-one">
                         <div class="uk-card-header border-card">
                             <div class="uk-grid-small uk-flex-middle uk-grid" uk-grid="">
                                 <div class="uk-width-auto">
@@ -95,7 +95,7 @@
                                                     <option value="4">Todos</option>
                                                     <option value="5">Personalizado</option>
                                                 </select>
-                                                <button class="uk-button uk-button-default width-button" type="button" tabindex="-1">
+                                                <button class="uk-button border-button width-button" type="button" tabindex="-1">
                                                     <span/>
                                                     <span uk-icon="icon: chevron-down"/>
                                                 </button>
@@ -111,7 +111,7 @@
                                                  value="#{tareaAlumnoControlador.tareaAlumnoModeloLista}"
                                                  var="tareaAlumno"
                                                  styleClass="tabla-alumnos uk-table uk-table-small uk-table-middle tablaPrimaria uk-table-hover uk-text-center tabla-profesor-dropdown uk-margin-top"
-                                                 headerClass="borde-top-amarillo uk-text-center thPrimario"
+                                                 headerClass="borde-top-azul uk-text-center thPrimario"
                                                  columnClasses="uk-width-small,uk-width-small,uk-width-small,uk-width-small"
                                                  rowClasses="tdPrimario"
                                                  footerClass="thPrimario uk-text-left">
