--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -35,7 +35,7 @@
         <div class="uk-margin-large-top"><h1 class="uk-margin-top uk-text-uppercase lescuadron ">Welcome!</h1></div>
         <div class="uk-grid" uk-grid="">
             <div class="uk-width-1-3@m">
-                <div class="uk-card uk-card-default uk-card-small color-card-four margen-one">
+                <div class="uk-card uk-card-default uk-card-small color-card-six margen-one">
                     <div class="uk-card-header border-card">
                         <div class="uk-grid-small uk-flex-middle" uk-grid="">
                             <div class="uk-width-auto">
