estilos a los profesores

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -67,9 +67,9 @@
 
         <div class="uk-grid uk-grid-medium uk-margin-large-bottom" data-uk-grid="">
             <!-- tabla alumnos -->
-            <div class="uk-width-1-1@s uk-margin-large-top">
+            <div class="uk-width-1-1@s">
                 <button uk-toggle="target: #modal-nuevo-alumno" class="boton-escuadron-base">agregar</button>
-                <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-section">Alumnos de la clase</h5>
+                <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-section padding-titulo">Alumnos de la clase</h5>
                 <h:form id="formulario-tabla-alumno" >
                     <div class="uk-overflow-auto">
                         <h:dataTable id="tabla-alumno"
