se quita control control superior y margen superior en las vistas de alumnos

--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -73,7 +73,7 @@
         <h:outputStylesheet library="css" name="biblioteca.css"/>
         <script src="https://www.youtube.com/iframe_api"></script>
 
-        <div class="uk-container  margen-superior  padding-inferior">
+        <div class="uk-container padding-inferior">
             <div data-uk-filter="target: .js-filter">
                 <h:panelGroup layout="block" styleClass="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom" pt:uk-grid="">
                     <ui:repeat value="#{alumnoControlador.tareaActvidadModeloLista}" var="tareaActvidadModelo">
