--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -76,7 +76,7 @@
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="letra.css"/>
         <h:outputStylesheet library="css" name="alumno/dashboard.css"/>
-        <div class="uk-section margen-superior">
+        <div class="">
             <div class="uk-container padding-contenedor">
                 <h1 class="lescuadron letra-titulo primera-mayuscula">#{alumno['dashboard.title']}</h1>
                  <h:panelGroup layout="block" styleClass="uk-grid" pt:uk-grid="">
