--- a/tecolotl-web/src/main/webapp/alumno/free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/free-library.xhtml
@@ -69,7 +69,7 @@
         <h:outputStylesheet library="css" name="navegacion.css"/>
         <h:outputStylesheet library="css" name="biblioteca.css"/>
 
-        <div class="uk-container  margen-superior  padding-inferior">
+        <div class="uk-container  padding-inferior">
             <div class="uk-width-1-1@m uk-margin-medium-top">
                 <form id="search-form" action="">
                     <div class="uk-inline uk-width-1-1">
