--- a/tecolotl-web/src/main/webapp/alumno/glossary.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/glossary.xhtml
@@ -79,7 +79,7 @@
       <ui:define name="contenido">
           <h:outputStylesheet library="css" name="alumno/glosario.css"/>
           <h:outputStylesheet library="css" name="letra.css"/>
-        <div class="uk-section margen-superior ">
+        <div class="uk-section">
 
             <div class="uk-container  uk-margin-auto" >
                 <h1 class="lescuadron letra-titulo sombra-titulo">Glossary</h1>
