--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -81,7 +81,7 @@
         <h:outputStylesheet library="css" name="/alumno/transcript/transcript-drag.css"/>
         <h:outputStylesheet library="css" name="/alumno/order-sentences.css"/>
         <h:outputStylesheet library="css" name="letra.css"/>
-        <div class="uk-section margen-superior">
+        <div class="uk-section">
             <div class="uk-container padding-contenedor">
                 <div uk-filter="target: .js-filter" >
                     <ul class="uk-subnav uk-subnav-pill uk-flex uk-flex-center">
