--- a/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
@@ -86,7 +86,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/alumno/select-mindmap.css"/>
-        <div class="uk-section margen-superior">
+        <div class="uk-section">
             <div class="uk-container padding-contenedor">
 
                 <h:panelGroup layout="block" styleClass="contiene" rendered="#{empty seleccionMapaMentalControlador.mapaMentalResueltoModeloLista}">
