--- a/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
@@ -11,9 +11,7 @@
         <f:event type="preRenderView" listener="#{mapaMentalControlador.llenaLista}"/>
     </f:metadata>
     <ui:define name="hamburguesa">
-        <div class="color-nav uk-visible@m">
-            <div class="uk-position-top-center nave-superior"><h:graphicImage library="img" name="alumno/control-superior.svg" class="" alt="" width="250" height="auto"/></div>
-        </div>
+
         <div class="color-nav uk-hidden@m">
             <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar="">
                 <div class="">
@@ -75,7 +73,7 @@
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/alumno/mapa-secuencia.css"/>
         <div class="uk-section">
-            <div class="uk-container  margen-superior color-fondo contenedor-padre margen-secuencia ">
+            <div class="uk-container  color-fondo contenedor-padre margen-secuencia ">
                 <h:panelGroup layout="block">
                     <h:graphicImage library="img" name="/alumno/pop-art/boton-finished.svg" styleClass="movimiento11 finalizado11" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
                     <!--<span>#{alumno['map2.title.answered']}</span>-->
