--- a/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
@@ -13,9 +13,7 @@
         <f:event type="preRenderView" listener="#{mapaMentalControlador.llenaLista}"/>
     </f:metadata>
     <ui:define name="hamburguesa">
-        <div class="color-nav uk-visible@m">
-            <div class="uk-position-top-center nave-superior"><h:graphicImage library="img" name="alumno/control-superior.svg" class="" alt="" width="250" height="auto"/></div>
-        </div>
+
         <div class="color-nav uk-hidden@m">
             <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar="">
                 <div class="">
@@ -76,7 +74,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/alumno/mapa-14.css"/>
-        <div class="uk-section margen-superior uk-margin-small-left uk-margin-small-right">
+        <div class="uk-section uk-margin-small-left uk-margin-small-right">
             <div class="uk-container padding-contenedor fondo-14">
                 <div class="titulo-14">
                     <h3 class="uk-text-capitalize">#{alumno['mindmap.map14.title.main']}</h3>
