--- a/tecolotl-web/src/main/webapp/alumno/mindmap/4.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/4.xhtml
@@ -11,9 +11,7 @@
         <f:event type="preRenderView" listener="#{mapaMentalControlador.llenaLista}"/>
     </f:metadata>
     <ui:define name="hamburguesa">
-        <div class="color-nav uk-visible@m">
-            <div class="uk-position-top-center nave-superior"><h:graphicImage library="img" name="alumno/control-superior.svg" class="" alt="" width="250" height="auto"/></div>
-        </div>
+
         <div class="color-nav uk-hidden@m">
             <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar="">
                 <div class="">
@@ -74,7 +72,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/alumno/mapa-comparar.css"/>
-        <div class="uk-section margen-superior uk-margin-small-right uk-margin-small-left">
+        <div class="uk-section uk-margin-small-right uk-margin-small-left">
             <h:form id="formulario-mapa-mental" class="uk-form-stacked">
             <div class="uk-container fondo-comparar uk-padding-remove ">
 
